--- a/.github/workflows/RDP.yml
+++ b/.github/workflows/RDP.yml
@@ -1,40 +1,25 @@
-name: RDP
+name: CI
 
-on: workflow_dispatch
+on: [push, workflow_dispatch]
 
 jobs:
   build:
 
     runs-on: windows-latest
-    timeout-minutes: 9999
 
     steps:
-    - name: Downloading ngrok.
-      run: |
-        Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
-        Invoke-WebRequest https://raw.githubusercontent.com/HaeImAlan/WindowsRDP/master/start.bat -OutFile start.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/HaeImAlan/WindowsRDP/master/wallpaper.bat -OutFile wallpaper.bat
-        Invoke-WebRequest https://raw.githubusercontent.com/HaeImAlan/WindowsRDP/master/loop.bat -OutFile loop.bat
-    - name: Extracting Ngrok File.
+    - name: Download
+      run: Invoke-WebRequest https://bin.equinox.io/c/bNyj1mQVY4c/ngrok-v3-stable-windows-amd64.zip -OutFile ngrok.zip
+    - name: Extract
       run: Expand-Archive ngrok.zip
-    - name: Connect via ngrok.
+    - name: Auth
       run: .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-    - name: Downloading anydesk.
-      run: |
-        Invoke-WebRequest https://download.anydesk.com/AnyDesk.exe -OutFile Anydesk.exe
-      env:
-        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
-    - name: Enabling RDP Access.
-      run: | 
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
-        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
-        copy Anydesk.exe  C:\Users\Public\Desktop\Anydesk.exe
-    - name: Creating Tunnel.
-      run: Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok\ngrok.exe tcp --region ap 3389"'
-    - name: Connect to the RDP.
-      run: cmd /c start.bat
-    - name: Success! You may now close this tab.
-      run: cmd /c loop.bat
+    - name: Enable TS
+      run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+    - run: Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+    - run: Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
+    - run: Set-LocalUser -Name "runneradmin" -Password (ConvertTo-SecureString -AsPlainText "P@ssw0rd!" -Force)
+    - name: Create Tunnel
+      run: .\ngrok\ngrok.exe tcp 3389
